[tool.poetry]
name = "vim-clutchify"
version = "0.0.11"
description = "vim-clutch evdev bindings for USB foot pedal. Linux only."
authors = ["twitchard <richard.marmorstein@gmail.com>", "kevna <lakevna@gmail.com>"]
license = "MIT"
keywords = ["vim", "evdev", "footpedal", "footswitch", "vim-clutch", "clutch"]
classifiers = [
    "Development Status :: 3 - Alpha"
]

[tool.poetry.scripts]
vim-clutchify = "bin/vim-clutchify"

[tool.poetry.dependencies]
python = "^3."
evdev = "^1.4.0"
xinput = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
