[tool.poetry]
name = "vim-clutchify"
version = "0.0.11"
description = "vim-clutch evdev bindings for USB foot pedal. Linux only."
authors = ["twitchard <richard.marmorstein@gmail.com>", "kevna <lakevna@gmail.com>"]
license = "MIT"
keywords = ["vim", "evdev", "footpedal", "footswitch", "vim-clutch", "clutch"]
classifiers = [
    "Development Status :: 3 - Alpha"
]
packages = [
    { include = "vim-clutchify", from = "bin" },
]

[tool.poetry.scripts]
# vim-clutchify = "vim-clutchify:main"

[tool.poetry.dependencies]
python = ">=3.6,<4"
evdev = "^1.4.0"
xinput = "^0.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
pylint-quotes = "^0.2.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
